[SP-5672] Backport of BISERVER-12852 - Java 8 has deprecated MaxPermSize - Need to remove from startup scripts if using Java 8 (8.3 Suite)